# krkrsdl2

./: .gitignore  .gitmodules  CMakeLists.txt  README.en_US.md  README.md  meson.build
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml
src/config/: LegacyMacOSCompatibility.h  SSE2OnlyX86SIMDUtil.h  jconfig.h  jconfigint.h  tp_stub_template.cmake
src/config/src_list/kirikirisdl2/: includes.txt  sources.txt
src/config/src_list/kirikirisdl3/: includes.txt  sources.txt
src/core/base/sdl2/: EventImpl.cpp  FileSelector.cpp  FileSelector.mm  FileSelectorMac.mm  NativeEventQueue.cpp  NativeEventQueue.h  PluginImpl.cpp  PluginImpl.h  StorageImpl.cpp  StorageImpl.h  SusieArchive.h  SysInitImpl.cpp  SystemImpl.cpp  makestub.py
src/core/base/sdl3/: EventImpl.cpp  FileSelector.cpp  FuncStubs.cpp  FuncStubs.h  NativeEventQueue.cpp  PluginImpl.cpp  PluginImpl.h  StorageImpl.cpp  StorageImpl.h  SusieArchive.cpp  SysInitImpl.cpp  SystemImpl.cpp  makestub.py
src/core/environ/sdl2/: Application.cpp  Application.h  ApplicationSpecialPath.h  TVPWindow.h
src/core/environ/sdl3/: Application.cpp  Application.h  ApplicationSpecialPath.h  DetectCPU.cpp  SystemControl.cpp  TVPWindow.h  VirtualKey.h
src/core/msg/sdl3/: MsgImpl.cpp  MsgImpl.h  MsgLoad.cpp
src/core/sdl2/: SDLApplication.cpp  SDLEntrypoint.cpp  SIMDeRenames.h
src/core/sdl3/: MacWindowBridge.h  MacWindowBridge.mm  SDLApplication.cpp  SDLApplication.h  SDLEntrypoint.cpp  SDLPrecompiledHeader.h  SIMDeRenames.h  TouchGestureRecognizer.cpp  TouchGestureRecognizer.h
src/core/sound/sdl2/: FAudioDevice.cpp  OpenALWaveMixer.h  WaveImpl.cpp
src/core/sound/sdl3/: AudioCodecDecoder.cpp  OpenALWaveMixer.cpp  OpenALWaveMixer.h  WaveImpl.cpp  WaveImpl.h
src/core/visual/sdl2/: DisabledAVX2.cpp  GraphicsLoaderImpl.h  VideoOvlImpl.cpp  VideoOvlImpl.h  WindowImpl.h
src/core/visual/sdl2/opengl/: OpenGLPlatformSDL2.cpp
src/core/visual/sdl3/: BasicDrawDevice.cpp  BasicDrawDevice.h  BitmapBitsAlloc.cpp  BitmapInfomation.h  LayerImpl.cpp  NativeFreeTypeFace.h  TVPScreen.cpp  TVPScreen.h  VideoOvlImpl.cpp  WindowImpl.cpp  WindowImpl.h
src/core/visual/sdl3/opengl/: OpenGLHeaderSDL3.h  OpenGLPlatformSDL3.cpp  OpenGLScreenSDL3.cpp  OpenGLScreenSDL3.h
